# FreeQL

./: .eslintrc.json  .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json  precache-manifest.0b0611bd329a1ce4de5ef9b5b89262a3.js  precache-manifest.1555bda4949f9966a3ca009273adf3e2.js  precache-manifest.18c5e1e4f846a0122d1ddcaac4c0cccf.js  precache-manifest.194b73c7f150417dd845408b0774f6ef.js  precache-manifest.3e8034261175e0d303e272168d513bba.js  precache-manifest.4e10218b53a773e5e31219cf3077b849.js  precache-manifest.4e713d140c8152c8c6c7852c0a9a9a76.js  precache-manifest.506e9623951914f70a504936a41c97d0.js  precache-manifest.5ed1b5831c4d840d31fe01f772d1b87c.js  precache-manifest.71de277b1a83ab175956819495b4101a.js  precache-manifest.7a6312f18baf8a0baff14d42d5c26827.js  precache-manifest.88bfdc7758b433f6d91e84497b1852d0.js  precache-manifest.a4303cd364d845a446900dc150a0ad46.js  precache-manifest.ab5f5474b0acb7e35c65b5d20ba078b8.js  precache-manifest.cbd6dd40f69a015e0e43c79607b3ff6d.js  precache-manifest.f680b9d6e6b17767e252ec350dca6cc5.js  service-worker.js  tailwind.config.js  watch.js
assets/: mycss.css
public/: index.html  open_systems.aux  open_systems.fdb_latexmk  open_systems.fls  open_systems.tex
solver/: CMakeLists.txt  JS_AQSystemSolver.cpp
solver/AQSystemSolver/: AQSystemSolver.hpp  CMakeLists.txt  LICENSE  README.md  SM_utils.hpp
src/: App.css  App.js  App.scss  CalculateResultWorker.js  Components.js  FreeQL.js  Logo.js  MyBootstrap.scss  Result.js  Species.js  (+6 more)
(+393 files in other folders)
